--- a/css/style.css
+++ b/css/style.css
@@ -19,3 +19,16 @@ body {
 .title-logo {
     margin-top: 20px;
 }
+
+hr {
+    color: #747704;
+    background-color: #747704;
+    height: 5px;
+}
+.main-picture {
+    align: center;
+}
+
+h3 {
+    text-transform: uppercase;
+}
