--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,11 @@
 body {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato", sans-serif;
     color: #747704;
     font-weight: 300;
 }
 
 .text-muted {
-    color: #BCBBBB;
+    color: #bcbbbb;
 }
 
 .text-thin {
@@ -24,9 +24,6 @@ hr {
     color: #747704;
     background-color: #747704;
     height: 5px;
-}
-.main-picture {
-    align: center;
 }
 
 h3 {
